<resources>
    <string name="app_name">BITNDT3</string>
    <string name="search_name">搜索</string>
    <string name="search_device">搜索设备</string>
    <string name="connected_device">已连接UTC列表</string>
    <string name="utc_10">UTC_10</string>
    <string name="unconnected_device">可用UTC列表</string>
    <string name="search">search</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="receiver_mode">Receiver Mode:</string>
    <string name="pulser_frequency">Pulser Frequency:</string>
    <string name="trigger_frequency">Trigger Frequency:</string>
    <string name="low_pass_cutoff">Low-pass Cutoff:</string>
    <string name="high_pass_cutoff">High-pass Cutoff:</string>
    <string name="tag_base">TAG BASE:</string>
    <string name="tag_step">TAG STEP:</string>
    <string name="pulser_voltage">Pulser Voltage:</string>
    <string name="settings">Settings:</string>
    <string name="please_input">请输入...</string>
    <string name="mhz">MHz</string>
    <string name="v">V</string>
    <string name="ns">ns</string>
    <string name="db">dB</string>
    <string name="confirm">确定</string>
    <string name="test">检测</string>
</resources>
