<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <GridLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:rowCount="13"
        android:columnCount="3"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/receiver_mode"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@drawable/bg_edittext"
            android:textColorHint="#AAAAAA"
            android:textSize="15sp"
            android:paddingStart="20dp"
            android:hint="@string/please_input"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_columnSpan="3"
            android:background="@color/warmGrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/pulser_frequency"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_row="2"
            android:layout_column="1"
            android:background="@drawable/bg_edittext"
            android:textColorHint="#AAAAAA"
            android:textSize="15sp"
            android:paddingStart="20dp"
            android:inputType="number"
            android:hint="@string/please_input"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/mhz"
            android:layout_marginStart="10dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/trigger_frequency"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_row="3"
            android:layout_column="1"
            android:background="@drawable/bg_edittext"
            android:textColorHint="#AAAAAA"
            android:textSize="15sp"
            android:inputType="number"
            android:paddingStart="20dp"
            android:hint="@string/please_input"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/mhz"
            android:layout_marginStart="10dp"
            android:textSize="15sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/warmGrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/low_pass_cutoff"
            android:inputType="number"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_row="5"
            android:layout_column="1"
            android:background="@drawable/bg_edittext"
            android:textColorHint="#AAAAAA"
            android:textSize="15sp"
            android:paddingStart="20dp"
            android:hint="@string/please_input"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="2"
            android:text="@string/mhz"
            android:layout_marginStart="10dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/high_pass_cutoff"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_row="6"
            android:layout_column="1"
            android:background="@drawable/bg_edittext"
            android:textColorHint="#AAAAAA"
            android:textSize="15sp"
            android:inputType="number"
            android:paddingStart="20dp"
            android:hint="@string/please_input"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="2"
            android:text="@string/mhz"
            android:layout_marginStart="10dp"
            android:textSize="15sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/warmGrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tag_base"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_row="8"
            android:layout_column="1"
            android:background="@drawable/bg_edittext"
            android:textColorHint="#AAAAAA"
            android:textSize="15sp"
            android:inputType="number"
            android:paddingStart="20dp"
            android:hint="@string/please_input"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="2"
            android:text="@string/db"
            android:layout_marginStart="10dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="9"
            android:layout_column="0"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tag_step"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_row="9"
            android:layout_column="1"
            android:background="@drawable/bg_edittext"
            android:textColorHint="#AAAAAA"
            android:textSize="15sp"
            android:inputType="number"
            android:paddingStart="20dp"
            android:hint="@string/please_input"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="9"
            android:layout_column="2"
            android:text="@string/ns"
            android:layout_marginStart="10dp"
            android:textSize="15sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_row="10"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/warmGrey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="11"
            android:layout_column="0"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/pulser_voltage"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_row="11"
            android:layout_column="1"
            android:background="@drawable/bg_edittext"
            android:textColorHint="#AAAAAA"
            android:textSize="15sp"
            android:inputType="number"
            android:paddingStart="20dp"
            android:hint="@string/please_input"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="11"
            android:layout_column="2"
            android:text="@string/v"
            android:layout_marginStart="10dp"
            android:textSize="15sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_row="12"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/warmGrey"/>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingBottom="50dp">

        <Button
            android:id="@+id/confirm"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_btn"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="50dp"
            android:textSize="15sp"
            android:text="@string/confirm"/>

        <Button
            android:id="@+id/test"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@drawable/bg_btn"
            android:textSize="15sp"
            android:text="@string/test"/>


    </LinearLayout>
</LinearLayout>
